--- a/climatesite/index.html
+++ b/climatesite/index.html
@@ -13,15 +13,39 @@
 
 		<div class="logobox"></div>
 		<div class="content"><h2>VIEW PROJECTS</h2>
-
-			<div class="student"><a href="students/michaelshillingburg.html"><img src="images/samplestudent.png" /></a>Gerald McPherson</div>
-			<div class="student"><img src="images/samplestudent.png" />Tonya Blackmarket</div>
-			<div class="student"><img src="images/samplestudent.png" />Aaron Carter</div>
-			<div class="student"><img src="images/samplestudent.png" />Denise Jacobson</div>
-			<div class="student"><img src="images/samplestudent.png" />Barb Jenkins</div>
-			<div class="student"><img src="images/samplestudent.png" />Guadalupe Williams</div>
-			<div class="student"><img src="images/samplestudent.png" />Louise Sanders</div>
-			<div class="student"><img src="images/samplestudent.png" />Buffalo Dillweed</div>
+			<div class="student"><div class="innerstudent"><a href="students/1.html"><img src="images/student.png" class="cushycms" title="Student 1" ></a></div><span class="cushycms-text">Student 1</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/2.html"><img src="images/student.png" class="cushycms" title="Student 2" ></a></div><span class="cushycms-text">Student 2</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/3.html"><img src="images/student.png" class="cushycms" title="Student 3" ></a></div><span class="cushycms-text">Student 3</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/4.html"><img src="images/student.png" class="cushycms" title="Student 4" ></a></div><span class="cushycms-text">Student 4</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/5.html"><img src="images/student.png" class="cushycms" title="Student 5" ></a></div><span class="cushycms-text">Student 5</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/6.html"><img src="images/student.png" class="cushycms" title="Student 6" ></a></div><span class="cushycms-text">Student 6</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/7.html"><img src="images/student.png" class="cushycms" title="Student 7" ></a></div><span class="cushycms-text">Student 7</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/8.html"><img src="images/student.png" class="cushycms" title="Student 8" ></a></div><span class="cushycms-text">Student 8</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/9.html"><img src="images/student.png" class="cushycms" title="Student 9" ></a></div><span class="cushycms-text">Student 9</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/10.html"><img src="images/student.png" class="cushycms" title="Student 10" ></a></div><span class="cushycms-text">Student 10</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/11.html"><img src="images/student.png" class="cushycms" title="Student 11" ></a></div><span class="cushycms-text">Student 11</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/12.html"><img src="images/student.png" class="cushycms" title="Student 12" ></a></div><span class="cushycms-text">Student 12</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/13.html"><img src="images/student.png" class="cushycms" title="Student 13" ></a></div><span class="cushycms-text">Student 13</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/14.html"><img src="images/student.png" class="cushycms" title="Student 14" ></a></div><span class="cushycms-text">Student 14</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/15.html"><img src="images/student.png" class="cushycms" title="Student 15" ></a></div><span class="cushycms-text">Student 15</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/16.html"><img src="images/student.png" class="cushycms" title="Student 16" ></a></div><span class="cushycms-text">Student 16</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/17.html"><img src="images/student.png" class="cushycms" title="Student 17" ></a></div><span class="cushycms-text">Student 17</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/18.html"><img src="images/student.png" class="cushycms" title="Student 18" ></a></div><span class="cushycms-text">Student 18</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/19.html"><img src="images/student.png" class="cushycms" title="Student 19" ></a></div><span class="cushycms-text">Student 19</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/20.html"><img src="images/student.png" class="cushycms" title="Student 20" ></a></div><span class="cushycms-text">Student 20</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/21.html"><img src="images/student.png" class="cushycms" title="Student 21" ></a></div><span class="cushycms-text">Student 21</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/22.html"><img src="images/student.png" class="cushycms" title="Student 22" ></a></div><span class="cushycms-text">Student 22</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/23.html"><img src="images/student.png" class="cushycms" title="Student 23" ></a></div><span class="cushycms-text">Student 23</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/24.html"><img src="images/student.png" class="cushycms" title="Student 24" ></a></div><span class="cushycms-text">Student 24</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/25.html"><img src="images/student.png" class="cushycms" title="Student 25" ></a></div><span class="cushycms-text">Student 25</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/26.html"><img src="images/student.png" class="cushycms" title="Student 26" ></a></div><span class="cushycms-text">Student 26</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/27.html"><img src="images/student.png" class="cushycms" title="Student 27" ></a></div><span class="cushycms-text">Student 27</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/28.html"><img src="images/student.png" class="cushycms" title="Student 28" ></a></div><span class="cushycms-text">Student 28</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/29.html"><img src="images/student.png" class="cushycms" title="Student 29" ></a></div><span class="cushycms-text">Student 29</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/30.html"><img src="images/student.png" class="cushycms" title="Student 30" ></a></div><span class="cushycms-text">Student 30</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/31.html"><img src="images/student.png" class="cushycms" title="Student 31" ></a></div><span class="cushycms-text">Student 31</span></div>
+			<div class="student"><div class="innerstudent"><a href="students/32.html"><img src="images/student.png" class="cushycms" title="Student 32" ></a></div><span class="cushycms-text">Student 32</span></div>
+			
 
 		</div>
 
