--- a/classes/thepound/index.html
+++ b/classes/thepound/index.html
@@ -4,6 +4,8 @@
 		<meta name="author" content="Flux User">
 		<meta name="description" content="My Website">
 		<meta name="keywords" content="Flux, Mac">
+		<meta name=“viewport” content="initial-scale=1.0">
+		<meta name="viewport" content="width=device-width">
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
 		<title>THE POUND</title>
 	</head>
