--- a/classes/thepound/index.html
+++ b/classes/thepound/index.html
@@ -6,6 +6,8 @@
 		<meta name="keywords" content="Flux, Mac">
 		<meta name=“viewport” content="initial-scale=1.0">
 		<meta name="viewport" content="width=device-width">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="translucent">
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
 		<title>THE POUND</title>
 	</head>
