--- a/classes/thepound/index.html
+++ b/classes/thepound/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="homeContainerCover">
-			<div id="dampen"></div>
+			<div id="dampen" onclick="toggle('menu'); toggle('dampen'); toggle('dampen2');"></div>
 			<div class="meat1"></div><div class="meat2"></div><div class="meat3"></div><div class="meat4"></div><div class="meat5"></div>
 			<div class="homeCoverLogobox"></div>
 			<div class="homeCoverStoryList"></div>
@@ -26,7 +26,7 @@
 			<div class="dog1"></div>
 			<div class="homeContentsMenu" onclick="toggle('menu'); toggle('dampen'); toggle('dampen2');">CONTENTS</div>
 			<div id="menu">
-				<div class="closebutton" onclick="toggle('menu'); toggle('dampen'); toggle('dampen2');">&#8592;</div>
+				<div class="closebutton" onclick="toggle('menu'); toggle('dampen'); toggle('dampen2');"></div>
 				<h1>CHOOSE A SECTION</h1>
 				<button class="menuButton" id="delay1">Cover Page</button>
 				<button class="menuButton" id="delay2">Contents</button>
@@ -41,7 +41,7 @@
 
 
 
-			<div id="dampen2"></div>
+			<div id="dampen2" onclick="toggle('menu'); toggle('dampen'); toggle('dampen2');"></div>
 
 		</div>
 
