--- a/classes/thepound/index.html
+++ b/classes/thepound/index.html
@@ -13,26 +13,29 @@
 	</head>
 	<body>
 		<div class="homeContainerCover">
-			<div id="dampen" onclick="toggle('menu'); toggle('dampen'); toggle('dampen2');"></div>
+			<div id="dampen" onclick="menuOn();"></div>
 			<div class="meat1"></div><div class="meat2"></div><div class="meat3"></div><div class="meat4"></div><div class="meat5"></div>
 			<div class="homeCoverLogobox"></div>
 			<div class="homeCoverStoryList"></div>
 			<div class="homeCoverBarcode"></div>
-			<div class="homeCoverDownButton"></div>
+			<div class="homeCoverDownButton" onclick="location.href='#dampen2'"></div>
 		</div>
 
 		<div class="homeContentsContainer">
+			<div class="homeImages"></div>
+			<div class="homeContent"></div>
+			<div class="dog2"></div>
 			<div class="homeContentsLogohead"></div>
 			<div class="dog1"></div>
-			<div class="homeContentsMenu" onclick="toggle('menu'); toggle('dampen'); toggle('dampen2');">CONTENTS</div>
+			<div class="homeContentsMenu" onclick="menuOn();">CONTENTS</div>
 			<div id="menu">
-				<div class="closebutton" onclick="toggle('menu'); toggle('dampen'); toggle('dampen2');"></div>
+				<div class="closebutton" onclick="menuOn();"></div>
 				<h1>CHOOSE A SECTION</h1>
-				<button class="menuButton" id="delay1">Cover Page</button>
-				<button class="menuButton" id="delay2">Contents</button>
-				<button class="menuButton" id="delay3">Departments</button>
-				<button class="menuButton" id="delay4">Feature</button>
-				<button class="menuButton" id="delay5">Contributors</button>
+				<button class="menuButton" id="delay1" onclick="location.href='index.html'">Cover Page</button>
+				<button class="menuButton" id="delay2" onclick="location.href='index.html#dampen2'; menuOn();">Contents</button>
+				<button class="menuButton" id="delay3" onclick="location.href='departments.html">Departments</button>
+				<button class="menuButton" id="delay4" onclick="location.href='feature.html'">Feature</button>
+				<button class="menuButton" id="delay5" onclick="location.href='departments.html#contributors'">Contributors</button>
 
 		
 
@@ -41,7 +44,7 @@
 
 
 
-			<div id="dampen2" onclick="toggle('menu'); toggle('dampen'); toggle('dampen2');"></div>
+			<div id="dampen2" onclick="menuOn();"></div>
 
 		</div>
 
@@ -50,6 +53,11 @@
 	</body>
 
 	<script>
+			function menuOn () {
+				toggle('menu'); toggle('dampen'); toggle('dampen2');
+			}
+
+
 			function toggle(id) {
 
       		var menu = document.getElementById(id);
