--- a/classes/thepound/index.html
+++ b/classes/thepound/index.html
@@ -26,7 +26,7 @@
 			<div class="homeContent"></div>
 			<div class="dog2"></div>
 			<div class="homeContentsLogohead"></div>
-			<div class="dog1"></div>
+			<div class="dog1"></div><div class="ketchup"></div>
 			<div class="homeContentsMenu" onclick="menuOn();">CONTENTS</div>
 			<div id="menu">
 				<div class="closebutton" onclick="menuOn();"></div>
