--- a/classes/pound/feature.html
+++ b/classes/pound/feature.html
@@ -18,7 +18,21 @@
 			<div class="featureRedBox">
 				<div class="featureMeat1"></div><div class="featureMeat2"></div><div class="featureMeat3"></div>
 			<canvas id="canvas"></canvas>
+
+			<div class="featureWhiteBox"></div>
+
 		</div>
+		
+
+
+
+
+
+
+
+
+			<!-- Menu System -->
+
 			<div class="homeContentsMenu" onclick="menuOn();">FEATURE</div>
 			<div id="menu">
 				<div class="closebutton" onclick="menuOn();"></div>
