--- a/classes/pound/feature.html
+++ b/classes/pound/feature.html
@@ -18,7 +18,7 @@
 			<div class="featureRedBox">
 				<div class="featureMeat1"></div><div class="featureMeat2"></div><div class="featureMeat3"></div>
 			<canvas id="canvas"></canvas>
-
+				<div class="featureContent1"></div>
 			<div class="featureWhiteBox"></div>
 
 		</div>
