--- a/classes/pound/feature.html
+++ b/classes/pound/feature.html
@@ -9,6 +9,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
+		<link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
 		<title>THE POUND</title>
 	</head>
 	<body>
@@ -16,10 +17,26 @@
 
 		<div class="featureContentsContainer">
 			<div class="featureRedBox">
+
 				<div class="featureMeat1"></div><div class="featureMeat2"></div><div class="featureMeat3"></div>
 			<canvas id="canvas"></canvas>
 				<div class="featureContent1"></div>
-			<div class="featureWhiteBox"></div>
+			<div class="featureWhiteBox">
+				<div class="featureText">
+					One of my quickest responses to the vegetarian/vegan anti-meat rhetoric is that if we were all vegetarians, there would be no fertilizer and then eventually no plants. If we only consumed plants, all the farmland now used to raise livestock would have to be used to raise edible plants, which could mean no livestock and in turn, no fertilizer from that livestock. In the long term, this would mean no plants. Or plants only raised on artificially produced fertilizers, which would also mean polluted waters.<br><br>
+
+Before I continue, there is bad beef and good beef, and I only eat good beef. We have all read the news articles and watched the horrifying videos about cows who are so sick and malnourished that they cannot walk or even stand up, but are then pushed by a forklift to be slaughtered and made into steaks. I don’t eat these and I don’t think you should either. There are such things as happy cows – cows raised on grass-only diets in open, green pastures.<br><br>
+
+Bad beef is raised on corn meal, which cows stomachs have not evolved to digest properly, which often leaves cows with serious stomach problems. On the other hand, cows’ ruminant digestive systems are well evolved to digest grass; The cow’s digestive system has two stomachs in which the food is softened first before being fully digested in the second stomach. In this manner, feeding cows food other than grass messes with their natural digestive process; one of the reasons why cows are given so many antibiotics now is because feeding them corn and other food that their stomachs aren’t meant to digest causes an upset in their bodies natural chemistry, thus opening them up to infection.
+
+
+
+				</div>
+
+
+
+
+			</div>
 
 		</div>
 		
