--- a/classes/pound/feature.html
+++ b/classes/pound/feature.html
@@ -29,9 +29,11 @@ Before I continue, there is bad beef and good beef, and I only eat good beef. We
 
 Bad beef is raised on corn meal, which cows stomachs have not evolved to digest properly, which often leaves cows with serious stomach problems. On the other hand, cows’ ruminant digestive systems are well evolved to digest grass; The cow’s digestive system has two stomachs in which the food is softened first before being fully digested in the second stomach. In this manner, feeding cows food other than grass messes with their natural digestive process; one of the reasons why cows are given so many antibiotics now is because feeding them corn and other food that their stomachs aren’t meant to digest causes an upset in their bodies natural chemistry, thus opening them up to infection.<br><br>
 
-Another important thing to note is that humans, among most other species without rumens, cannot digest grass. Michael Pollan, in his book The Omnivore’s Dilemma, visits Polyface Farm, which raises grass-fed beef along with a whole slew of other livestock raised on their natural food. Without going into a long description of the merits of Polyface Farm, Pollan’s discussion of the advantages of feeding cows grass, from the perspective of energy consumption, is one of the strongest arguments for eating meat. At Polyface Farm, the cows are rotationally grazed, which means that the cows are allowed to eat in one area of the pasture before being moved to another area of the farm to eat the following day. In this manner, the cows partially eat the grass stem, but not the whole stalk. As a result, the grass grows back much faster than it would if the cows were allowed to stay on one plot of land for an extended period of time and ate the grass stalks to the ground. Because of this constant trimming and growth cycle, the pastures at Polyface Farm, and at other farms that rotationally graze their livestock, produce more biomass than the same plot of land would if corn were raised in its place.<br><br>
+Another important thing to note is that humans, among most other species without rumens, cannot digest grass. Michael Pollan, in his book The Omnivore’s Dilemma, visits Polyface Farm, which raises grass-fed beef along with a whole slew of other livestock raised on their natural food. Without going into a long description of the merits of Polyface Farm, Pollan’s discussion of the advantages of feeding cows grass, from the perspective of energy consumption, is one of the strongest arguments for eating meat. At Polyface Farm, the cows are rotationally grazed, which means that the cows are allowed to eat in one area of the pasture before being moved to another area of the farm to eat the following day. In this manner, the cows partially eat the grass stem, but not the whole stalk. As a result, the grass grows back much faster than it would if the cows were allowed to stay on one plot of land for an extended period of time and ate the grass stalks to the ground. Because of this constant trimming and growth cycle, the pastures at Polyface Farm, and at other farms that rotationally graze their livestock, produce more biomass than the same plot of land would if corn were raised in its place.<br>
 
-One of the strong arguments against eating meat is that great amount of food energy wasted every time an animal eats another animal (a 9-to-1 ratio), but in the case of cows that are grass-fed, they are eating biomass from which we cannot glean food calories. In addition, the energy to grow grass comes from the sun, which means cows are, in essence, converting the sun’s energy, through the venue of grass, into food energy that we can consume. And, importantly, grass fed beefy is mighty tasty.<br><br>
+<div class="featureRecommended"></div>
+
+One of the strong arguments against eating meat is that great amount of food energy wasted every time an animal eats another animal (a 9-to-1 ratio), but in the case of cows that are grass-fed, they are eating biomass from which we cannot glean food calories. In addition, the energy to grow grass comes from the sun, which means cows are, in essence, converting the sun’s energy, through the venue of grass, into food energy that we can consume. And, importantly, grass fed beef is mighty tasty.<br><br>
 
 And to my final reason for eating meat: It tastes good. I crave it. I am lethargic both physically and mentally without it. I also have canine teeth. Vegetarians and vegans often say that humans have evolved to a point where they don’t need to eat meat to survive. While I would be able to live without meat, my life would not be as good. Just as cows can live on corn meal rather than grass, humans can live only plants, but maybe they shouldn’t. I believe there is a biological reason I crave meat: My body needs it.<br><br>
 
@@ -42,7 +44,9 @@ Further, the energy argument I stated above is only valid for rotationally grass
 And so, I will now say again: I eat meat. I will continue to eat meat. And I think you should too.
 				</div>
 
-				<div class="featurePullQuote">When it comes to "chemical residues," horsemeat performs as well or better than beef, chicken and pork.</div>
+				<div class="featurePullQuote">It tastes good.<br> I crave it. <br>I am lethargic both physically and mentally without it.</div>
+				<div class="featurePullQuote2">I will reiterate, however, that there is good and bad meat.</div>
+				<div class="featurePullImg"><div class="zoom"></div></div>
 
 
 
@@ -50,6 +54,7 @@ And so, I will now say again: I eat meat. I will continue to eat meat. And I thi
 			</div>
 
 		</div>
+			<div class="closerBox"></div>
 		
 
 
