--- a/classes/pound/feature.html
+++ b/classes/pound/feature.html
@@ -54,7 +54,7 @@ And so, I will now say again: I eat meat. I will continue to eat meat. And I thi
 			</div>
 
 		</div>
-			<div class="closerBox"></div>
+			<div class="closerBox"><div class="dull"><img src="images/logo2.svg" ></div></div>
 		
 
 
