--- a/classes/pound/contents.html
+++ b/classes/pound/contents.html
@@ -29,7 +29,7 @@
 				<button class="menuButton" id="delay2" onclick="location.href='contents.html'; menuOn();">Contents</button>
 				<button class="menuButton" id="delay3" onclick="location.href='departments.html">Departments</button>
 				<button class="menuButton" id="delay4" onclick="location.href='feature.html'">Feature</button>
-				<button class="menuButton" id="delay5" onclick="location.href='departments.html#contributors'">Contributors</button>
+				<button class="menuButton" id="delay5" onclick="location.href='contributors.html'">Contributors</button>
 
 		
 
