--- a/classes/pound/contents.html
+++ b/classes/pound/contents.html
@@ -20,7 +20,7 @@
 			<div class="dog2"></div>
 			<div class="homeContentsLogohead"></div>
 			<div class="dog1"></div><div class="ketchup"></div>
-			<div class="closerBox2"><div class="dull2"><a href="contents.html"><img src="images/logo2.svg" ></a></div></div>
+			<div class="closerBox2"><div class="dull2"><img src="images/logo2.svg" ></div></div>
 			<div class="homeContentsMenu" onclick="menuOn();">CONTENTS</div>
 			<div id="menu">
 				<div class="closebutton" onclick="menuOn();"></div>
