--- a/classes/pound/departments.html
+++ b/classes/pound/departments.html
@@ -15,10 +15,11 @@
 	<body>
 		
 
-		<div class="contributorContent">
+		<div class="departmentContent"><div class="burg"></div>
 			<div class="homeContentsLogohead"></div>
-			<div class="closerBox3"><div class="dull"><img src="images/logo2.svg" onclick="location.href='contents.html'" /></div></div>
+			<div class="closerBox4"><div class="dull"><img src="images/logo2.svg" onclick="location.href='contents.html'" /></div></div>
 		</div>
+
 
 
 
@@ -29,7 +30,7 @@
 
 			<!-- Menu System -->
 
-			<div class="homeContentsMenu" onclick="menuOn();">CONTRIBUTORS</div>
+			<div class="homeContentsMenu" onclick="menuOn();">DEPARTMENTS</div>
 			<div id="menu">
 				<div class="closebutton" onclick="menuOn();"></div>
 				<h1>CHOOSE A SECTION</h1>
