--- a/classes/pound/contributors.html
+++ b/classes/pound/contributors.html
@@ -35,7 +35,7 @@
 				<h1>CHOOSE A SECTION</h1>
 				<button class="menuButton" id="delay1" onclick="location.href='index.html'">Cover Page</button>
 				<button class="menuButton" id="delay2" onclick="location.href='contents.html'; menuOn();">Contents</button>
-				<button class="menuButton" id="delay3" onclick="location.href='departments.html">Departments</button>
+				<button class="menuButton" id="delay3" onclick="location.href='departments.html'">Departments</button>
 				<button class="menuButton" id="delay4" onclick="location.href='feature.html'">Feature</button>
 				<button class="menuButton" id="delay5" onclick="location.href='contributors.html'">Contributors</button>
 
