color shifts I'm done

--- a/classes/pound/contributors.html
+++ b/classes/pound/contributors.html
@@ -17,7 +17,7 @@
 
 		<div class="contributorContent">
 			<div class="homeContentsLogohead"></div>
-			<div class="closerBox3"><div class="dull"><img src="images/logo2.svg" onclick="location.href='contents.html'" /></div></div>
+			<div class="closerBox3"><div class="dull2"><img src="images/logo2.svg" onclick="location.href='contents.html'" /></div></div>
 		</div>
 
 
