--- a/classes/pound/departments.html
+++ b/classes/pound/departments.html
@@ -17,7 +17,7 @@
 
 		<div class="departmentContent"><div class="burg"></div>
 			<div class="homeContentsLogohead"></div>
-			<div class="closerBox4"><div class="dull"><img src="images/logo2.svg" onclick="location.href='contents.html'" /></div></div>
+			<div class="closerBox4"><div class="dull2"><img src="images/logo2.svg" onclick="location.href='contents.html'" /></div></div>
 		</div>
 
 
