--- a/clients/fw/fw2/index.html
+++ b/clients/fw/fw2/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Future Warrior">
 	<meta name="keywords" content="">
 	<link href="main.css" rel="stylesheet" media="screen" type="text/css">
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<title>Future Warrior</title>
 
 	<script>
