--- a/clients/fw/index.html
+++ b/clients/fw/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Future Warrior">
 	<meta name="keywords" content="">
 	<link href="main.css" rel="stylesheet" media="screen" type="text/css">
-	<meta name = "viewport" content = "width = device-width, user-scalable = no">
+	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<title>Future Warrior</title>
 
@@ -19,6 +19,11 @@ var g;
 var particleCount;
 var pxs = new Array();
 var rint = 110;
+
+document.ontouchmove = function(event){
+    event.preventDefault();
+}
+
 
 $(document).ready(function(){
 	WIDTH = window.innerWidth;
