--- a/clients/zl/index.html
+++ b/clients/zl/index.html
@@ -8,7 +8,7 @@
 	<link href="main.css" rel="stylesheet" media="screen" type="text/css">
 	<meta name="viewport" content="width=700; initial-scale=1;">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<title>Future Warrior</title>
+	<title>Zach Lipkins – Discography</title>
 
 	<script>
 	var WIDTH;
