--- a/clients/zl/index.html
+++ b/clients/zl/index.html
@@ -22,7 +22,7 @@ var blues = new Array();
 var rint = 110;
 
 document.ontouchmove = function(event){
-    event.preventDefault();
+//    event.preventDefault();
 }
 
 
