--- a/clients/zl/index.html
+++ b/clients/zl/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Zach Lipkins">
 	<meta name="keywords" content="">
 	<link href="main.css" rel="stylesheet" media="screen" type="text/css">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=700">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<title>Zach Lipkins – Discography</title>
 
