--- a/clients/zl/index.html
+++ b/clients/zl/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Zach Lipkins">
 	<meta name="keywords" content="">
 	<link href="main.css" rel="stylesheet" media="screen" type="text/css">
-	<meta name="viewport" content="width=700">
+	<meta name="viewport" content="width=700; initial-scale=0.9">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<title>Zach Lipkins – Discography</title>
 
@@ -19,7 +19,7 @@ var g;
 var particleCount;
 var pxs = new Array();
 var blues = new Array();
-var rint = 110;
+var rint = 200
 
 document.ontouchmove = function(event){
 //    event.preventDefault();
