--- a/clients/zl/index.html
+++ b/clients/zl/index.html
@@ -27,8 +27,8 @@ document.ontouchmove = function(event){
 
 
 $(document).ready(function(){
-	WIDTH = window.innerWidth;
-	HEIGHT = window.innerHeight;
+	WIDTH = document.innerWidth;
+	HEIGHT = document.innerHeight;
 	particleCount = window.innerHeight/10;
 
 
