--- a/clients/zl/index.html
+++ b/clients/zl/index.html
@@ -21,14 +21,12 @@ var pxs = new Array();
 var blues = new Array();
 var rint = 200
 
-document.ontouchmove = function(event){
-//    event.preventDefault();
-}
+
 
 
 $(document).ready(function(){
-	WIDTH = document.innerWidth;
-	HEIGHT = document.innerHeight;
+	WIDTH = window.innerWidth;
+	HEIGHT = window.innerHeight;
 	particleCount = window.innerHeight/10;
 
 
