--- a/universe/index.html
+++ b/universe/index.html
@@ -79,6 +79,7 @@ document.addEventListener('mousemove', function(e){
 
 soundManager.setup({
   url: 'swf',
+
 });
 
 window.onload = function() {
@@ -96,39 +97,48 @@ window.onload = function() {
 
   	soloMid = soundManager.createSound({
    	   id: 'soloMid',
-   	   url: 'audio/2/soloMid.wav'
+   	   url: 'audio/2/soloMid.wav',
+   	   autoLoad:true
  	});
  	soloLow = soundManager.createSound({
    	   id: 'soloLow',
-   	   url: 'audio/2/soloLow.wav'
+   	   url: 'audio/2/soloLow.wav',
+   	   autoLoad:true
  	});
  	soloHi = soundManager.createSound({
    	   id: 'soloHi',
-   	   url: 'audio/2/soloHi.wav'
+   	   url: 'audio/2/soloHi.wav',
+   	   autoLoad:true
  	});
  	chordMid = soundManager.createSound({
    	   id: 'chordMid',
-   	   url: 'audio/2/chordMid.wav'
+   	   url: 'audio/2/chordMid.wav',
+   	   autoLoad:true
  	});
  	chordLow = soundManager.createSound({
    	   id: 'chordLow',
-   	   url: 'audio/2/chordLow.wav'
+   	   url: 'audio/2/chordLow.wav',
+   	   autoLoad:true
  	});
  	chordHi = soundManager.createSound({
    	   id: 'chordHi',
-   	   url: 'audio/2/chordHi.wav'
+   	   url: 'audio/2/chordHi.wav',
+   	   autoLoad:true
  	});
  	sweepMid = soundManager.createSound({
    	   id: 'sweepMid',
-   	   url: 'audio/2/sweepMid.wav'
+   	   url: 'audio/2/sweepMid.wav',
+   	   autoLoad:true
  	});
  	sweepHi = soundManager.createSound({
    	   id: 'sweepHi',
-   	   url: 'audio/2/sweepHi.wav'
+   	   url: 'audio/2/sweepHi.wav',
+   	   autoLoad:true
  	});
  	sweepLow = soundManager.createSound({
    	   id: 'sweepLow',
-   	   url: 'audio/2/sweepLow.wav'
+   	   url: 'audio/2/sweepLow.wav',
+   	   autoLoad:true
  	});
  
 };
