--- a/universe/index.html
+++ b/universe/index.html
@@ -27,7 +27,7 @@
 	<div class="container">
 		<img src="images/logo.svg" class="logo" width="300" onclick="playSound('pad');">
 		<br><br>
-		Our Teriyaki Original Chicken Sandwich is a crispy breaded white meat chicken fillet topped with a sweet and savory teriyaki sauce with a hint of ginger, ripe tomatoes, chopped lettuce, and creamy mayonnaise all on a toasted hoagie sesame seed bun. Our Teriyaki Original Chicken Sandwich is a crispy breaded white meat chicken fillet topped with a sweet and savory teriyaki sauce with a hint of ginger, ripe tomatoes, chopped lettuce, and creamy mayonnaise all on a toasted hoagie sesame seed bun. Our Teriyaki Original Chicken Sandwich is a crispy breaded white meat chicken fillet topped with a sweet and savory teriyaki sauce with a hint of ginger, ripe tomatoes, chopped lettuce, and creamy mayonnaise all on a toasted hoagie sesame seed bun.
+		Our <b>Teriyaki Original Chicken Sandwich</b> is a crispy breaded white meat chicken fillet topped with a sweet and savory teriyaki sauce with a hint of ginger, ripe tomatoes, chopped lettuce, and creamy mayonnaise all on a toasted hoagie sesame seed bun. Our Teriyaki Original Chicken Sandwich is a crispy breaded white meat chicken fillet topped with a sweet and savory teriyaki sauce with a hint of ginger, ripe tomatoes, chopped lettuce, and creamy mayonnaise all on a toasted hoagie sesame seed bun. Our Teriyaki Original Chicken Sandwich is a crispy breaded white meat chicken fillet topped with a sweet and savory teriyaki sauce with a hint of ginger, ripe tomatoes, chopped lettuce, and creamy mayonnaise all on a toasted hoagie sesame seed bun.
 	</div>
 
 </body>
