--- a/universe/index.html
+++ b/universe/index.html
@@ -76,6 +76,16 @@ document.addEventListener('mousemove', function(e){
 	}
 }, false);
 
+window.ondevicemotion = function(event) {  
+    var accelerationX = event.accelerationIncludingGravity.x;  
+    var accelerationY = event.accelerationIncludingGravity.y;  
+    var accelerationZ = event.accelerationIncludingGravity.z; 
+    for (var i = 0, len = dots.length; i < len; i++) {
+    	dots[i].opacity = convertRange(accelerationY, [ 0, winHeight ], [ 0.3, 0.1 ]);
+    dots[i].rotation = convertRange(Math.sqrt((accelerationZ * i) + (accelerationX * i)), [0, Math.sqrt(winWidth * winHeight)], [0.00001, 10]); 
+	} 
+}  
+
 
 soundManager.setup({
   url: 'swf',
