--- a/universe/index.html
+++ b/universe/index.html
@@ -55,7 +55,7 @@ var accentColor;
 
 
 
-var two = new Two({ width: winWidth, height: winHeight, type: Two.Types.canvas }).appendTo(elem);
+var two = new Two({ width: winWidth, height: winHeight, type: Two.Types.svg }).appendTo(elem);
 
 var soloMid, soloHi, soloLow;
 var chordMid, chordHi, chordLow;
